--- a/views/counter_management_view.ejs
+++ b/views/counter_management_view.ejs
@@ -37,7 +37,7 @@
                                         <div class="row">
                                             <div class="col" style="margin-top: 10px;">
                                             <form action="/counter_management_view/completeCurr/<%=counter[i].counterNum %>?_method=PUT" method="POST"> 
-                                                <button class="btn btn-primary btn-sm" type="submit" value="" disabled>Comp Curr<br></button>
+                                                <button class="btn btn-primary btn-sm" type="submit" value="" disabled>Complete Current<br></button>
                                             </form>
                                             </div>
                                         </div>
@@ -56,7 +56,7 @@
                                             <div class="row">
                                                 <div class="col" style="margin-top: 10px;">
                                                     <form action="/counter_management_view/completeCurr/<%=counter[i].counterNum %>?_method=PUT" method="POST"> 
-                                                        <button class="btn btn-primary btn-sm" type="submit">Comp Curr<br></button>
+                                                        <button class="btn btn-primary btn-sm" type="submit">Complete Current<br></button>
                                                     </form>
                                                 </div>
                                             </div>
@@ -76,7 +76,7 @@
                                             <div class="row">
                                                 <div class="col" style="margin-top: 10px;">
                                                     <form action="/counter_management_view/completeCurr/<%=counter[i].counterNum %>?_method=PUT" method="POST"> 
-                                                        <button class="btn btn-primary btn-sm" type="submit">Comp Curr<br></button>
+                                                        <button class="btn btn-primary btn-sm" type="submit">Complete Current<br></button>
                                                     </form>
                                                 </div>
                                             </div>
