--- a/views/customer_view.ejs
+++ b/views/customer_view.ejs
@@ -17,14 +17,14 @@
     <div class="container" style="width: 100%;margin-top: 50px;">
         <h3>Customer View</h3>
     </div>
-    <div class="container">
+    <div class="container" style="margin-top: 20px;">
         <div class="row">
             <div class="col">
-                <div class="card mx-auto" style="width: 55%;">
+                <div class="card mx-auto" style="width: 60%;">
                     <div class="card-body">
                         <div class="row">
                             <form action="/customer_view/customertakeNumber" method="POST">
-                                <div class="col text-center">
+                                <div class="col text-center" >
                                     <div class="row">
                                         <div class="col"><label class="col-form-label">Now Serving:</label></div>
                                     <% if (locals.ticketServingCurrNumber != null) { %>
@@ -38,8 +38,8 @@
                                         <div class="col"><label class="col-form-label">Last Ticket:</label></div>
                                         <div class="col"><input class="form-control-plaintext" type="text" value="<%= ticketServingLastNumber %>" readonly=""></div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col text-right"><button class="btn btn-primary btn-sm" type="submit" name="ticketCategory" value="low" >Take Normal Ticket</button></div>
+                                    <div class="row py-3">
+                                        <div class="col text-right"><button class="btn btn-primary btn-sm" type="submit" name="ticketCategory" value="low">Take Normal Ticket</button></div>
                                         <div class="col text-left"><button class="btn btn-primary btn-sm" type="submit" name="ticketCategory" value="premium">Take Premium Ticket</button></div>
                                     </div>
                                 </div>
@@ -51,20 +51,20 @@
         </div>
     </div>
     <div class="container">
-        <div class="row text-center" style="margin-top: 20px;">
+        <div class="row text-center" style="margin-top: 20px">
             <% if (locals.counter != null) { %>
                 <% for (let i=0 ; i<counter.length; i++) { %> 
-                <div class="col">
+                <div class="col" style="padding: 10px;">
                             <% if (counter[i].counterStatus == 'offline') {%>
                                 <div class="card" id="cardCounter1" style="background: #b5b4b4;">
-                                    <div class="card-body">
-                                        <div id="circleCounter1" style="background: #838383;border-radius: 50%;width: 15px;height: 15px;margin-left: 93%;"></div>
+                                    <div class="card-body" style="user-select: none;">
+                                        <div id="circleCounter1" style="background: #838383;border-radius: 50%;width: 15px;height: 15px;margin-left: 93%;" ></div>
                                         <% if (counter[i].counterType == 'premium') { %>
-                                            <h4 class="card-title">Premium Counter <%= counter[i].counterNum %></h4>
+                                            <h4 class="card-title" >Premium Counter <%= counter[i].counterNum %></h4>
                                         <% } else { %>
-                                            <h4 class="card-title">Counter <%= counter[i].counterNum %></h4>
+                                            <h4 class="card-title" >Counter <%= counter[i].counterNum %></h4>
                                         <% } %>                                        
-                                        <input class="form-control-plaintext" type="text" value="Offline" readonly="" disabled>
+                                        <h6 class="form-control-plaintext" style="user-select: none;"> Offline</h5>
                                     </div>
                                 </div>
 
@@ -76,8 +76,8 @@
                                             <h4 class="card-title">Premium Counter <%= counter[i].counterNum %></h4>
                                         <% } else { %>
                                             <h4 class="card-title">Counter <%= counter[i].counterNum %></h4>
-                                        <% } %>                                            
-                                        <input class="form-control-plaintext" type="text" value="Available" readonly="">
+                                        <% } %>              
+                                        <h6 class="form-control-plaintext"> Available</h5>                              
                                     </div>
                                 </div>
 
